# redis_vectorsearch

./: README.md  anime-test.csv  demo_and_dataloader.py  pyproject.toml  schema.json  vl_demo.py  vl_demo_anime.py  web_scraper_selenium.py
app/: anime-sorted.csv  app.py  load_anime_data.py  run_demo.py
old_versions/: vl_demo.py
src/redisvl_demo/: load_anime_data.py  redisvl_demo.py  run_demo.py  run_search_ui.py  schema.py  test_vector_search.py  vector_extend.py
tests/: test_redisvl_demo.py
